[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["Hazel Lynn James"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
python-dotenv = "^0.20.0"
mysql-connector-python = "^8.0.28"
sqlacodegen = "^2.3.0"
Flask-WTF = "^1.0.1"
WTForms = {extras = ["email"], version = "^3.0.1"}
email-validator = "^1.1.3"
WTForms-SQLAlchemy = "^0.3"
toml = "^0.10.2"
Flask-CKEditor = "^0.4.6"
Flask-Mail = "^0.9.1"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
